2011-11-05 Borut Razem <borut.razem AT gmail.com>

	* src/port.mk: fixed bug #3401455: Missing dependency
	* .version, sdcc.spec, doc/sdccman.lyx, doc/INSTALL.txt:
	  changed sdcc version to 3.1.0
	* doc/README.txt, support/scripts/sdcc.nsi: updated, small textual fix

2011-11-05 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/mcs51/cc2430.h: applied patch 3114002, thanks to
	  George Oikonomou

2011-11-05 Raphael Neider <rneider AT web.de>

	* device/include/pic14/pic14devices.txt: add descriptions for a number
	  of devices with enhanced cores; support for most of them remains
	  incomplete due to lacking support by gputils
	* device/non-free/include/pic14/pic16f1826.h,
	* device/non-free/include/pic14/pic16f1827.h,
	* device/non-free/include/pic14/pic16f1933.h,
	* device/non-free/lib/pic14/libdev/Makefile.in,
	* device/non-free/lib/pic14/libdev/devices.txt,
	* device/non-free/lib/pic14/libdev/pic16f1826.c,
	* device/non-free/lib/pic14/libdev/pic16f1827.c,
	* device/non-free/lib/pic14/libdev/pic16f1933.c: add support for some
	  of the newly described devices; 16f1826/7 libraries are disabled in
	  the Makefile due to lacking support from gputils
	* doc/sdccman.lyx: fix list of supported devices

2011-11-04 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/mcs51/ralloc.c (isFree),
	* src/ds390/ralloc.c (isFree): fixed bug #3400845
	* src/SDCCast.c (decorateTree),
	* src/mcs51/gen.c (assignResultValue): fixed bug #3419769
	* sdas/linksrc/lkmain.c (main): fixed bug #3362385
	* src/ds390/ralloc.c (packRegisters): fixed bug #3432159
	* support/regression/tests/condopptr.c: enable for all targets

2011-11-03 Borut Razem <borut.razem AT gmail.com>

	* support/scripts/sdcc.nsi: updated to support pic14 enhanced devices

2011-11-02 Raphael Neider <rneider AT web.de>

	* device/include/pic14/pic14devices.txt: prevent SDCC from assuming
	  a single data bank by specifying more memmap records (per device)
